--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="Cael Findley - Software Engineer specializing in aquaculture technology, AI development, and cybersecurity solutions at Three Sisters Oyster Company." />
-  <meta name="keywords" content="software engineer, aquaculture, AI development, cybersecurity, data analysis, React, Node.js, AWS" />
-  <meta name="author" content="Cael Findley" />
-  
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://caelfindley.com/" />
-  <meta property="og:title" content="Cael Findley - Software Engineer Portfolio" />
-  <meta property="og:description" content="Passionate Software Engineer building innovative solutions for aquaculture and technology." />
-  <meta property="og:image" content="https://caelfindley.com/og-image.jpg" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Cael Findley - Software Engineer specializing in aquaculture technology, AI development, and cybersecurity solutions at Three Sisters Oyster Company." />
+    <meta name="keywords" content="software engineer, aquaculture, AI development, cybersecurity, data analysis, React, Node.js, AWS" />
+    <meta name="author" content="Cael Findley" />
+    <meta name="theme-color" content="#0f172a" />
+    <meta name="robots" content="index,follow" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#0f172a" />
 
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://caelfindley.com/" />
-  <meta property="twitter:title" content="Cael Findley - Software Engineer Portfolio" />
-  <meta property="twitter:description" content="Passionate Software Engineer building innovative solutions for aquaculture and technology." />
-  <meta property="twitter:image" content="https://caelfindley.com/og-image.jpg" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://caelfindley.com/" />
+    <meta property="og:title" content="Cael Findley - Software Engineer Portfolio" />
+    <meta property="og:description" content="Passionate Software Engineer building innovative solutions for aquaculture and technology." />
+    <meta property="og:image" content="https://caelfindley.com/og-image.jpg" />
 
-  <title>Cael Findley - Software Engineer Portfolio</title>
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://caelfindley.com/" />
+    <meta property="twitter:title" content="Cael Findley - Software Engineer Portfolio" />
+    <meta property="twitter:description" content="Passionate Software Engineer building innovative solutions for aquaculture and technology." />
+    <meta property="twitter:image" content="https://caelfindley.com/og-image.jpg" />
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <title>Cael Findley - Software Engineer Portfolio</title>
 
-  <div id="root"></div>
-</head>
-<body>
-</body>
-</html> 
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+
+    <link rel="canonical" href="https://caelfindley.com/" />
+
+    <!-- Fonts: Inter -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
+  </head>
+  <body class="font-sans bg-gray-900">
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
