This is a fix for alot of the demos and webpage

--- a/public/index.html
+++ b/public/index.html
@@ -13,17 +13,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://caelfindley.com/" />
+    <meta property="og:url" content="https://findley.netlify.app/" />
     <meta property="og:title" content="Cael Findley - Software Engineer Portfolio" />
     <meta property="og:description" content="Passionate Software Engineer building innovative solutions for aquaculture and technology." />
-    <meta property="og:image" content="https://caelfindley.com/og-image.jpg" />
+    <meta property="og:image" content="https://findley.netlify.app/og-image.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://caelfindley.com/" />
+    <meta property="twitter:url" content="https://findley.netlify.app/" />
     <meta property="twitter:title" content="Cael Findley - Software Engineer Portfolio" />
     <meta property="twitter:description" content="Passionate Software Engineer building innovative solutions for aquaculture and technology." />
-    <meta property="twitter:image" content="https://caelfindley.com/og-image.jpg" />
+    <meta property="twitter:image" content="https://findley.netlify.app/og-image.jpg" />
 
     <title>Cael Findley - Software Engineer Portfolio</title>
 
@@ -33,7 +33,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 
-    <link rel="canonical" href="https://caelfindley.com/" />
+    <link rel="canonical" href="https://findley.netlify.app/" />
 
     <!-- Fonts: Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
